# FinalAssignment/Controllers/WeatherController.go
@@ -2,6 +2,7 @@ package Controllers
 
 import (
 	model "FinalAssignment/Repository/Models"
+	"encoding/base64"
 	"encoding/json"
 	"fmt"
 	"github.com/gin-gonic/gin"
@@ -9,14 +10,20 @@ import (
 	"log"
 	"net/http"
 	"strconv"
+	"strings"
 )
 
 func GetWeather(c *gin.Context) {
 
-	lat, _ := strconv.ParseFloat(c.Param("lat"), 64)
-	lon, _ := strconv.ParseFloat(c.Param("lon"), 64)
+	weatherH := strings.SplitN(c.Request.Header.Get("Weather"), " ", 2)
 
-	url := fmt.Sprintf("%s%f%s%f%s%s", "https://api.openweathermap.org/data/2.5/weather?lat=", lat, "&lon=",
+	payload, _ := base64.StdEncoding.DecodeString(weatherH[0])
+	pair := strings.SplitN(string(payload), ":", 2)
+
+	lat, _ := strconv.ParseFloat(pair[0], 64)
+	lon, _ := strconv.ParseFloat(pair[1], 64)
+
+	url := fmt.Sprintf("%s%f%s%f%s%s", "https://api.openweathermap.org/data/2.5/weather?lat=", lat, "&lonHeader=",
 		lon, "&appid=", "1c3d10c3307ce3d7f22757f9fbf51020")
 
 	res, err := http.Get(url)
