# FinalAssignment/Repository/Models/UserModel.go
@@ -4,8 +4,3 @@ type User struct {
 	Username string `json:"username" gorm:"unique"`
 	Password string `json:"password"`
 }
-
-type CreateUser struct {
-	Name     string `json:"name" binding:"required"`
-	Password string `json:"password" binding:"required"`
-}
