# FinalAssignment/RoutersSetup/routersSetup.go
@@ -17,6 +17,7 @@ func Setup() *gin.Engine {
 
 	apiTask := &handlers.APIEnvTask{DB: repo.GetDB()}
 	apiList := &handlers.APIEnvList{DB: repo.GetDB()}
+	apiUser := &handlers.APIEnvUser{DB: repo.GetDB()}
 
 	router.Use(func(ctx *gin.Context) {
 		// This is a sample demonstration of how to attach middlewares in Gin
@@ -47,7 +48,9 @@ func Setup() *gin.Engine {
 	router.DELETE("/api/lists/:id", auth.BasicAuth(), apiList.DeleteList)
 
 	// Weather endpoint
-	router.GET("/api/weather/:lat/:lon", auth.BasicAuth(), controllers.GetWeather)
+	router.GET("/api/weather", auth.BasicAuth(), controllers.GetWeather)
+
+	router.POST("/api/CreateUser", auth.BasicAuth(), apiUser.CreateUser)
 
 	return router
 }
